  - Resolved an issue wherein the application would crash when importing or exporting paintings.
  - Resolved an issue wherein the application would save texture mods with an incorrect reported file size (Thanks Perchbird!)
  - Resolved an issue wherein TTMP files were importable while in Lumina mode.

2021-04-18
+ MINOR
  - Added the ability to switch to the high resolution version of textures under the UI category by checking the checkbox in the top right of the viewport. (Thanks goat!)

2021-04-16
+ MINOR
  - Lumina/Penumbra Integration features have been added to TexTools. ( See: https://docs.google.com/document/d/1VPfpMts8HBCxpaI7aV-n7EwhQQS2ODODHAzD8Ww8rVw/edit )
+ BUGFIXES
  - Mounts, Minions, and Weapons are now viewable/editable again via their standard category selection.
  
2021-04-13
+ MINOR
  - Offsets updated for FFXIV Patch 5.5 Global Version

2021-04-08
+ MINOR
  - Updated offsets for Chinese version.

2021-03-07
+ BUGFIXES
  - Resolved an issue wherein in the modlist menu would crash the application under certain conditions.
  - Resolved an issue wherein the Snowman Suit and other Body-Leg-Foot items displayed the incorrect item when selected.
  - Resolved an issue wherein the Item Select on Import dialog was not properly respecting the 'Make All Variants Identical' checkbox.
  - The 'Add to FMV' button is now properly disabled for item types that are not supported (Ex. Weapons, furniture, monsters)

2021-02-22
+ MINOR
  - Improved Tangent calculations when importing 3D Models to fix spontaneous visible seam generation along UV2 and/or Vertex Color seams.
  - Update Textools Website Links
  - Updated Item Sets File
+ BUGFIXES
   - Fixed a TexTools crash issue with some furniture items (Thanks Kaya!)

2021-01-13
+ MINOR
  - Item Sets file updated for 5.41
  - Easy-Installer now automatically prompts for admin rights rather than forcing the user to set them manually.
+ BUGFIXES
  - Offsets updated for KR 5.3 patch.